# cmake_cline

./: Build.sh  CMakeLists.txt  README.md
gtest/: CMakeLists.txt
gtest/inc/private/: gtest_private.h  stdafx.h
gtest/src/: gtest.cpp
